# fnec-rust

./: .benchmark-gates.toml  .benchmark-hosts.env.example  .gitignore  404.html  COPYING  Cargo.toml  Makefile  README.md  SBOM.spdx.json  deny.toml  index.html  out1.txt  out2.txt  out3.txt  out4.txt  pr_body.txt
.cargo/: audit.toml
.githooks/: pre-commit  pre-push
.github/: FUNDING.yml
apps/nec-cli/: Cargo.toml
apps/nec-cli/examples/: gpu_crossover.rs
apps/nec-cli/src/: bench.rs  cli_args.rs  exec_profile.rs  geometry_validation.rs  main.rs  resonance_search.rs  solve_session.rs  sweep_config.rs  vars_config.rs  warnings.rs
apps/nec-cli/tests/: core_flags_contract.rs  corpus_deck_sanity.rs  corpus_validation.rs  current_source_junction.rs  deck_validator.rs  ex_cards.rs  exec_modes.rs  geometry_diagnostics.rs  gpu_benchmark_gate.rs  gpu_resident_solve_cli.rs  gpu_rp_exec.rs  ground_diagnostics.rs  hallen_fr_cpu_reference.rs  hallen_fr_gpu_stub.rs  json_output_contract.rs  junction_feedpoint.rs  ld_loads.rs  loaded_case_tracking.rs  mpie_solver_cli.rs  near_field_spherical.rs  normalized_pattern.rs  parser_warnings.rs  pt_print_control.rs  receive_junction.rs  receive_pattern.rs  report_contract.rs  resonance_contract.rs  result_cache_contract.rs  rp_avg_power_gain.rs  scriptability_contract.rs  sinusoidal_a2_regression.rs  sommerfeld_ground_cli.rs  sweep_contract.rs  template_contract.rs  tl_cards.rs  topology_fallback.rs  worker_gpu_exec.rs  worker_integration.rs
apps/nec-cli/tests/common/: mod.rs
apps/nec-gui/: Cargo.toml
apps/nec-gui/src/: app_state.rs  camera.rs  deck_write.rs  lib.rs  main.rs  mesh.rs  model_doc.rs  plot.rs  session.rs  solve.rs  sweep_plot.rs
apps/nec-gui/src/viewport/: mod.rs  primitive.rs
apps/nec-gui/src/viewport/shaders/: lines.wgsl  triangle.wgsl
apps/nec-gui/tests/: gui_smoke.rs
apps/nec-tui/: Cargo.toml
apps/nec-tui/src/: main.rs
benchmarks/: benchmark-latest.json  ci-baseline.json  index.html  real-gpu-crossover.json
bindings/fnec_py/: Cargo.toml  pyproject.toml
bindings/fnec_py/src/: lib.rs
bindings/fnec_py/tests/: test_smoke.py
corpus/: README.md  dipole-ex1-freesp-51seg.nec  dipole-ex1-pulse-current-freesp-51seg.nec  dipole-ex2-freesp-51seg.nec  dipole-ex3-freesp-51seg.nec  dipole-ex3-i4-freesp-51seg.nec  dipole-ex3-i4-two-freesp-51seg.nec  dipole-ex4-freesp-51seg.nec  dipole-ex4-pulse-current-freesp-51seg.nec  dipole-ex5-freesp-51seg.nec  dipole-ex5-pulse-current-freesp-51seg.nec  dipole-freesp-51seg.nec  dipole-freesp-gm-inplace-shifted.nec  dipole-freesp-rp-51seg.nec  dipole-freesp-rp-large-grid.nec  dipole-gn-1-null.nec  dipole-gn0-fresnel-51seg.nec  dipole-gn2-buried-unsupported.nec  dipole-gn2-deferred.nec  dipole-gn2-near-ground-51seg.nec  dipole-ground-51seg.nec  dipole-ground-rp-51seg.nec  dipole-ld-loaded-51seg.nec  dipole-ld-series-rc-51seg.nec  dipole-ld-series-rl-51seg.nec  dipole-loaded.nec  dipole-nt-freesp-51seg.nec  dipole-nt-pt-freesp-51seg.nec  dipole-nt-pt-interleaved-freesp-51seg.nec  dipole-nt-pt-repeated-freesp-51seg.nec  dipole-nt-tl-equiv-freesp-51seg.nec  dipole-pt-freesp-51seg.nec  dipole-pt-nt-freesp-51seg.nec  dipole-pt-nt-interleaved-freesp-51seg.nec  dipole-pt-nt-repeated-freesp-51seg.nec  dipole-sinusoidal-51seg.nec  dipole-vars.toml  dipole-xaxis-rp-grid-51seg.nec  frequency-sweep-dipole.nec  multi-source-gm-copy.nec  (+10 more)
crates/nec_accel/: Cargo.toml
crates/nec_accel/src/: gpu_kernels.rs  lib.rs  wgpu_device.rs
crates/nec_accel/src/shaders/: hallen_normal_solve.wgsl  rp_farfield.wgsl  rp_farfield_batch.wgsl  zmatrix_fill.wgsl
crates/nec_accel/tests/: gpu_hallen_solve.rs  gpu_microbench.rs  gpu_resident_solve.rs  gpu_zmatrix_parity.rs
crates/nec_model/: Cargo.toml
crates/nec_model/src/: card.rs  deck.rs  lib.rs
crates/nec_parser/: Cargo.toml
crates/nec_parser/src/: lib.rs  template.rs
crates/nec_project/: Cargo.toml
crates/nec_project/src/: lib.rs
crates/nec_project/tests/: project_roundtrip.rs
crates/nec_report/: Cargo.toml
crates/nec_report/src/: lib.rs
crates/nec_solver/: Cargo.toml
crates/nec_solver/src/: basis.rs  excitation.rs  farfield.rs  geometry.rs  lib.rs  linear.rs  loads.rs  matrix.rs  mpie.rs  network.rs  planewave.rs  sommerfeld.rs  tl.rs
crates/nec_solver/tests/: collinear_merge.rs  current_source.rs  current_source_junction.rs  finite_ground_rp.rs  general_junction.rs  ground_impedance.rs  lossy_tl.rs  mpie_farfield.rs  mpie_free_space.rs  mpie_ground.rs  mpie_junction.rs  mpie_loop.rs  near_field.rs  nt_network.rs  planewave_junction.rs  planewave_nec2c.rs  pulse_rhs_scaling.rs  sommerfeld_ground.rs
crates/nec_worker/: Cargo.toml
crates/nec_worker/src/: capability.rs  controller.rs  hosts.rs  lib.rs  pool.rs  protocol.rs  result_cache.rs  solve.rs  ssh_worker.rs  worker.rs
crates/nec_worker/tests/: gpu_exec.rs
docs/: README.md  applied-math.md  architecture.md  automation-guide.md  autopilot-operating-contract.md  backlog.md  benchmark-artifact-schema.md  benchmark.md  benchmarks.md  card-support-matrix.md  changelog.md  cli-guide.md  contributing.md  copilot-efficiency-guide.md  corpus-validation-strategy.md  dependency-policy.md  design.md  distributed-execution-design.md  gpu-arch.md  gui-guide.md  gui-redesign-plan.md  json-output-schema.md  memories.md  mpie-solver-scope.md  multi-vendor-gpu.md  nec-requirements.md  nec4-support.md  nec5-frontier.md  par011-dropin-contract.md  par011-dropin-evidence-memo.md  ph7-chk-001-gpu-stub-retirement.md  ph7-chk-002-gpu-microbenchmark.md  ph7-chk-003-gpu-resident-solve.md  ph7-chk-004-distributed-gpu-execution.md  ph7-chk-005-real-gpu-benchmark.md  ph8-chk-001-current-source.md  ph8-chk-002-plane-wave-excitation.md  ph8-chk-003-ex-type5.md  ph8-chk-004-nt-network.md  ph8-chk-005-lossy-tl.md  (+26 more)
examples/: dipole_14mhz.nec  dipole_14mhz_test.nec  optimize_swr.py  resonance-search.nec.toml  sweep-spec.toml
fuzz/: Cargo.toml
fuzz/corpus/nec_parser_parse/: basic-dipole.nec
fuzz/fuzz_targets/: nec_parser_parse.rs
scripts/: benchmark-compare-json.sh  check-version-bump-docs.sh  (+12 more)
(+41 files in other folders)
