# SPDX-License-Identifier: GPL-3.0-only
# Copyright (C) 2026 Simon Keimer (DC0SK)

[workspace]
members = [
    "crates/nec_parser",
    "crates/nec_model",
    "crates/nec_solver",
    "crates/nec_accel",
    "crates/nec_report",
    "crates/nec_project",
    "crates/nec_worker",
    "apps/nec-cli",
    "apps/nec-gui",
    "apps/nec-tui",
]
exclude = ["fuzz", "bindings/fnec_py"]
resolver = "2"

[workspace.package]
version = "0.6.0"
authors = ["Simon Keimer (DC0SK)"]
license = "GPL-3.0-only"
edition = "2021"
rust-version = "1.75"

[workspace.dependencies]
# Internal crates — version kept in sync with workspace
nec_parser  = { path = "crates/nec_parser" }
nec_model   = { path = "crates/nec_model" }
nec_solver  = { path = "crates/nec_solver" }
nec_accel   = { path = "crates/nec_accel" }
nec_report  = { path = "crates/nec_report" }
nec_project = { path = "crates/nec_project" }
nec_worker  = { path = "crates/nec_worker" }

# External crates
num-complex = "0.4"
pollster = "0.3"
rayon = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
bytemuck = { version = "1", features = ["derive"] }
wgpu = "29"
serde_json = "1"
base64 = "0.22"
sha2 = "0.10"
