# SPDX-License-Identifier: GPL-3.0-only
# Copyright (C) 2026 Simon Keimer (DC0SK)

[package]
name = "nec-cli"
description = "fnec CLI frontend — run NEC decks and projects from the command line"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "fnec"
path = "src/main.rs"

[dependencies]
nec_parser  = { workspace = true }
nec_model   = { workspace = true }
nec_accel   = { workspace = true }
nec_project = { workspace = true }
nec_report  = { workspace = true }
nec_solver  = { workspace = true }
num-complex = { workspace = true }
rayon       = { workspace = true }

[dev-dependencies]
serde_json = "1"
