# SPDX-License-Identifier: GPL-3.0-only
# Copyright (C) 2026 Simon Keimer (DC0SK)

[package]
name = "nec-gui"
description = "fnec GUI frontend — modern task-oriented antenna modeling interface (iced)"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
name = "nec_gui"
path = "src/lib.rs"

[[bin]]
name = "fnec-gui"
path = "src/main.rs"

[dependencies]
nec_model   = { workspace = true }
nec_parser  = { workspace = true }
nec_solver  = { workspace = true }
num-complex = { workspace = true }
toml        = { workspace = true }
serde       = { workspace = true }
rfd         = "0.14"
iced        = { version = "0.13", features = ["advanced", "canvas"] }
glam        = { workspace = true }
bytemuck    = { workspace = true }

[lints]
workspace = true
