# SPDX-License-Identifier: GPL-2.0-only
# Copyright (C) 2026 Simon Keimer (DC0SK)

[package]
name = "nec-tui"
description = "fnec TUI frontend — terminal interface for batch runs and quick inspection (ratatui)"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "fnec-tui"
path = "src/main.rs"

[dependencies]
nec_project = { workspace = true }
