# SPDX-License-Identifier: GPL-3.0-only
# Copyright (C) 2026 Simon Keimer (DC0SK)

[package]
name = "nec_accel"
description = "Optional GPU acceleration backends for fnec-rust (wgpu compute, future: CUDA/Metal)"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[features]
default = []
wgpu = ["dep:wgpu", "dep:bytemuck"]

[dependencies]
num-complex = { workspace = true }
bytemuck = { workspace = true, optional = true }
wgpu = { workspace = true, optional = true }

[dev-dependencies]
pollster = { workspace = true }
nec_solver = { workspace = true }
nec_parser = { workspace = true }
nec_model  = { workspace = true }
