# SPDX-License-Identifier: GPL-3.0-only
# Copyright (C) 2026 Simon Keimer (DC0SK)

[package]
name = "nec_model"
description = "Domain model for NEC structures: geometry, sources, ground, frequency sweeps, requests"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
