# SPDX-License-Identifier: GPL-2.0-only
# Copyright (C) 2026 Simon Keimer (DC0SK)

[package]
name = "nec_parser"
description = "NEC2/4nec2-tolerant deck parser with diagnostics and dialect auto-detection"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
