# SPDX-License-Identifier: GPL-3.0-only
# Copyright (C) 2026 Simon Keimer (DC0SK)

[package]
name = "nec_worker"
description = "Distributed worker protocol, controller, and solve dispatch for fnec-rust"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
nec_parser  = { workspace = true }
nec_model   = { workspace = true }
nec_solver  = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
toml        = { workspace = true }
num-complex = { workspace = true }
base64      = { workspace = true }
sha2        = { workspace = true }

[lints]
workspace = true
